--- a/template/package.json
+++ b/template/package.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
-        "@minecraft/server": "~1.18.0-beta.1.21.61-stable",
-        "@minecraft/server-ui": "~1.4.0-beta.1.21.61-stable"
+        "@minecraft/server": "1.18.0-beta.1.21.61-stable",
+        "@minecraft/server-ui": "1.4.0-beta.1.21.61-stable"
     },
     "devDependencies": {
         "typescript": "^5.7.3"
