--- a/template/package.json
+++ b/template/package.json
@@ -5,5 +5,10 @@
     },
     "devDependencies": {
         "typescript": "^5.7.3"
+    },
+    "overrides": {
+        "@minecraft/server-ui": {
+            "@minecraft/server": "1.18.0-beta.1.21.61-stable"
+        }
     }
 }
