--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
     "name": "sapi-pro",
-    "version": "0.0.2",
+    "version": "0.3.1",
+    "description": "A practical library for MCBE ScriptAPI",
+    "main": "scripts/main.js",
+    "types": "scripts/main.d.ts",
+    "type": "module",
     "author": {
         "name": "XiaoYangx666",
         "email": "2408807389@qq.com"
+    },
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/XiaoYangx666/SAPI-Pro.git"
     },
     "dependencies": {
         "@minecraft/server": "2.1.0-beta.1.21.90-stable",
@@ -15,12 +24,15 @@
         "typescript": "^5.7.3"
     },
     "scripts": {
-        "build": "python3 build.py --declaration false",
-        "build:declare": "python3 build.py --declaration true"
+        "build:nodeclare": "python3 build.py --declaration false",
+        "build": "python3 build.py --declaration true"
     },
     "overrides": {
         "@minecraft/server-ui": {
             "@minecraft/server": "2.1.0-beta.1.21.90-stable"
         }
-    }
+    },
+    "files": [
+        "scripts"
+    ]
 }
