--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
-        "target": "ES2020",
+        "target": "esnext",
         "moduleResolution": "node",
-        "module": "ES2020",
+        "module": "esnext",
         "declaration": true,
         "noLib": false,
         "sourceMap": false,
@@ -13,9 +13,8 @@
         "noImplicitAny": true,
         "outDir": "scripts",
         "rootDir": "src",
-        "allowJs": true,
-        "baseUrl": "./src"
+        "allowJs": true
     },
-    "include": ["./src"],
+    "include": ["./src", "SAPI-Pro"],
     "compileOnSave": false
 }
